tests/typing/faulty_ops_c.sy
start :: fn do
    1 in {1, 2, 3}
    1 in {"abc", "abc"}
end
// error: $Mismatch
